lib/src/ffi.dart

// Auto-generated file.

import 'ffi_base.dart';
import 'dart:ffi';
import 'package:ffi/ffi.dart';

final ImagingNew = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode, Int32 xsize, Int32 ysize),
  Pointer<NativeType> Function(Pointer<Utf8> mode, int xsize, int ysize)
>('ImagingNew');

final ImagingNewDirty = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode, Int32 xsize, Int32 ysize),
  Pointer<NativeType> Function(Pointer<Utf8> mode, int xsize, int ysize)
>('ImagingNewDirty');

final ImagingNew2Dirty = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode, Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<Utf8> mode, Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingNew2Dirty');

final ImagingDelete = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> im),
  void Function(Pointer<NativeType> im)
>('ImagingDelete');

final ImagingNewBlock = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode, Int32 xsize, Int32 ysize),
  Pointer<NativeType> Function(Pointer<Utf8> mode, int xsize, int ysize)
>('ImagingNewBlock');

final ImagingNewMap = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> filename, Int32 readonly, Pointer<Utf8> mode, Int32 xsize, Int32 ysize),
  Pointer<NativeType> Function(Pointer<Utf8> filename, int readonly, Pointer<Utf8> mode, int xsize, int ysize)
>('ImagingNewMap');

final ImagingNewPrologue = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode, Int32 xsize, Int32 ysize),
  Pointer<NativeType> Function(Pointer<Utf8> mode, int xsize, int ysize)
>('ImagingNewPrologue');

final ImagingNewPrologueSubtype = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode, Int32 xsize, Int32 ysize, Int32 structure_size),
  Pointer<NativeType> Function(Pointer<Utf8> mode, int xsize, int ysize, int structure_size)
>('ImagingNewPrologueSubtype');

final ImagingCopyPalette = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> destination, Pointer<NativeType> source),
  void Function(Pointer<NativeType> destination, Pointer<NativeType> source)
>('ImagingCopyPalette');

final ImagingHistogramDelete = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> histogram),
  void Function(Pointer<NativeType> histogram)
>('ImagingHistogramDelete');

final ImagingAccessInit = libImaging.lookupFunction<
  Void Function(),
  void Function()
>('ImagingAccessInit');

final ImagingAccessNew = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im),
  Pointer<NativeType> Function(Pointer<NativeType> im)
>('ImagingAccessNew');

final ImagingPaletteNew = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode),
  Pointer<NativeType> Function(Pointer<Utf8> mode)
>('ImagingPaletteNew');

final ImagingPaletteNewBrowser = libImaging.lookupFunction<
  Pointer<NativeType> Function(),
  Pointer<NativeType> Function()
>('ImagingPaletteNewBrowser');

final ImagingPaletteDuplicate = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> palette),
  Pointer<NativeType> Function(Pointer<NativeType> palette)
>('ImagingPaletteDuplicate');

final ImagingPaletteDelete = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> palette),
  void Function(Pointer<NativeType> palette)
>('ImagingPaletteDelete');

final ImagingPaletteCachePrepare = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> palette),
  int Function(Pointer<NativeType> palette)
>('ImagingPaletteCachePrepare');

final ImagingPaletteCacheUpdate = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> palette, Int32 r, Int32 g, Int32 b),
  void Function(Pointer<NativeType> palette, int r, int g, int b)
>('ImagingPaletteCacheUpdate');

final ImagingPaletteCacheDelete = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> palette),
  void Function(Pointer<NativeType> palette)
>('ImagingPaletteCacheDelete');

final ImagingQuantize = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 colours, Int32 mode, Int32 kmeans),
  Pointer<NativeType> Function(Pointer<NativeType> im, int colours, int mode, int kmeans)
>('ImagingQuantize');

final ImagingSectionEnter = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> cookie),
  void Function(Pointer<NativeType> cookie)
>('ImagingSectionEnter');

final ImagingSectionLeave = libImaging.lookupFunction<
  Void Function(Pointer<NativeType> cookie),
  void Function(Pointer<NativeType> cookie)
>('ImagingSectionLeave');

final ImagingError_OSError = libImaging.lookupFunction<
  Pointer<Uint8> Function(),
  Pointer<Uint8> Function()
>('ImagingError_OSError');

final ImagingError_MemoryError = libImaging.lookupFunction<
  Pointer<Uint8> Function(),
  Pointer<Uint8> Function()
>('ImagingError_MemoryError');

final ImagingError_ModeError = libImaging.lookupFunction<
  Pointer<Uint8> Function(),
  Pointer<Uint8> Function()
>('ImagingError_ModeError');

final ImagingError_Mismatch = libImaging.lookupFunction<
  Pointer<Uint8> Function(),
  Pointer<Uint8> Function()
>('ImagingError_Mismatch');

final ImagingError_ValueError = libImaging.lookupFunction<
  Pointer<Uint8> Function(Pointer<Utf8> message),
  Pointer<Uint8> Function(Pointer<Utf8> message)
>('ImagingError_ValueError');

final ImagingError_Clear = libImaging.lookupFunction<
  Void Function(),
  void Function()
>('ImagingError_Clear');

final ImagingAlphaComposite = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2)
>('ImagingAlphaComposite');

final ImagingBlend = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2, Float alpha),
  Pointer<NativeType> Function(Pointer<NativeType> imIn1, Pointer<NativeType> imIn2, double alpha)
>('ImagingBlend');

final ImagingCopy = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im),
  Pointer<NativeType> Function(Pointer<NativeType> im)
>('ImagingCopy');

final ImagingConvert = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode, Pointer<NativeType> palette, Int32 dither),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode, Pointer<NativeType> palette, int dither)
>('ImagingConvert');

final ImagingConvertInPlace = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode)
>('ImagingConvertInPlace');

final ImagingConvertMatrix = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode, Pointer<Float> m),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode, Pointer<Float> m)
>('ImagingConvertMatrix');

final ImagingConvertTransparent = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode, Int32 r, Int32 g, Int32 b),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Utf8> mode, int r, int g, int b)
>('ImagingConvertTransparent');

final ImagingCrop = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 x0, Int32 y0, Int32 x1, Int32 y1),
  Pointer<NativeType> Function(Pointer<NativeType> im, int x0, int y0, int x1, int y1)
>('ImagingCrop');

final ImagingExpand = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 x, Int32 y, Int32 mode),
  Pointer<NativeType> Function(Pointer<NativeType> im, int x, int y, int mode)
>('ImagingExpand');

final ImagingFill = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Uint8> ink),
  Pointer<NativeType> Function(Pointer<NativeType> im, Pointer<Uint8> ink)
>('ImagingFill');

final ImagingFill2 = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> into, Pointer<Uint8> ink, Pointer<NativeType> mask, Int32 x0, Int32 y0, Int32 x1, Int32 y1),
  int Function(Pointer<NativeType> into, Pointer<Uint8> ink, Pointer<NativeType> mask, int x0, int y0, int x1, int y1)
>('ImagingFill2');

final ImagingFillBand = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 band, Int32 color),
  Pointer<NativeType> Function(Pointer<NativeType> im, int band, int color)
>('ImagingFillBand');

final ImagingFillLinearGradient = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode),
  Pointer<NativeType> Function(Pointer<Utf8> mode)
>('ImagingFillLinearGradient');

final ImagingFillRadialGradient = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode),
  Pointer<NativeType> Function(Pointer<Utf8> mode)
>('ImagingFillRadialGradient');

final ImagingFilter = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 xsize, Int32 ysize, Pointer<Float> kernel, Float offset),
  Pointer<NativeType> Function(Pointer<NativeType> im, int xsize, int ysize, Pointer<Float> kernel, double offset)
>('ImagingFilter');

final ImagingFlipLeftRight = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingFlipLeftRight');

final ImagingFlipTopBottom = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn)
>('ImagingFlipTopBottom');

final ImagingGaussianBlur = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, Float radius, Int32 passes),
  Pointer<NativeType> Function(Pointer<NativeType> imOut, Pointer<NativeType> imIn, double radius, int passes)
>('ImagingGaussianBlur');

final ImagingGetBand = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 band),
  Pointer<NativeType> Function(Pointer<NativeType> im, int band)
>('ImagingGetBand');

final ImagingMerge = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<Utf8> mode, Pointer<Pointer<NativeType>> bands),
  Pointer<NativeType> Function(Pointer<Utf8> mode, Pointer<Pointer<NativeType>> bands)
>('ImagingMerge');

final ImagingSplit = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<Pointer<NativeType>> bands),
  int Function(Pointer<NativeType> im, Pointer<Pointer<NativeType>> bands)
>('ImagingSplit');

final ImagingGetBBox = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<Int32> bbox),
  int Function(Pointer<NativeType> im, Pointer<Int32> bbox)
>('ImagingGetBBox');

final ImagingGetColors = libImaging.lookupFunction<
  Pointer<NativeType> Function(Pointer<NativeType> im, Int32 maxcolors, Pointer<Int32> colors),
  Pointer<NativeType> Function(Pointer<NativeType> im, int maxcolors, Pointer<Int32> colors)
>('ImagingGetColors');

final ImagingGetExtrema = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<Uint8> extrema),
  int Function(Pointer<NativeType> im, Pointer<Uint8> extrema)
>('ImagingGetExtrema');

final ImagingGetProjection = libImaging.lookupFunction<
  Int32 Function(Pointer<NativeType> im, Pointer<Uint8> xproj, Pointer<Uint8> yproj),
  int Function(Pointer<NativeType> im, Pointer<Uint8> xproj, Pointer<Uint8> yproj)
>('ImagingGetProjection');
